--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: '14'
 
@@ -33,15 +33,15 @@ jobs:
         run: git config --global user.name 'GitHub Actions' && git config --global user.email 'actions@github.com'
 
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
+          repository: ${{ github.repository }}
           ref: gh-pages
           path: gh-pages
 
-      
+      # Commit and Push Changes to gh-pages branch
       - name: Commit and Push Changes
         run: |
           cd gh-pages
           git add App.js
           git commit -m "Update App.js"
-    
