--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -39,9 +39,10 @@ jobs:
           ref: main
           path: gh-pages
 
-      # Commit and Push Changes to gh-pages branch
+      
       - name: Commit and Push Changes
         run: |
           cd gh-pages
-          git add App.js
+          git add .
           git commit -m "Update App.js"
+          git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}" HEAD:gh-pages
