--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ${{ github.repository }}
-          ref: gh-pages
+          ref: main
           path: gh-pages
 
         
