--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '14'
 
@@ -29,29 +29,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Git
-        run: git config --global user.name 'GitHub Actions' && git config --global user.email 'actions@github.com'
+      - name: Set blue color
+        run: echo "Deployed"
 
-      # Create a new directory to store the gh-pages branch
-      - name: Create gh-pages directory if not exists
-        run: mkdir -p gh-pages
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          ref: gh-pages
+          path: gh-pages
 
-      # Clone the main branch into the gh-pages directory
-      - name: Clone Repository to gh-pages branch
-        run: git clone -b main --single-branch https://github.com/${{ github.repository }} gh-pages
+      - name: Copy Updated App.js
+        run: cp build/App.js gh-pages/App.js
 
-      # Remove all files from the gh-pages branch (except .git directory)
-      - name: Clean gh-pages directory
-        run: |
-          cd gh-pages
-          shopt -s extglob
-          rm -rf !(.git)
-
-
-      # Commit and Push Changes to gh-pages branch
       - name: Commit and Push Changes
         run: |
-          cd gh-pages
-          git add .
-          git commit -m "Deploy to GitHub Pages"
-          git push --force origin gh-pages
+            cd gh-pages
+               git config --global user.name 'GitHub Actions'
+              git config --global user.email 'actions@github.com'
+             git add .
+             git commit -m "Deploy to GitHub Pages"
+    
+    
