--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -38,8 +38,8 @@ jobs:
           ref: main
           path: gh-pages
 
-      - name: Copy Updated App.js
-        run: cp build/App.js gh-pages/App.js
+      - name:  Update App.js
+        run:  gh-pages/App.js
 
       - name: Commit and Push Changes
         run: |
