--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -41,11 +41,6 @@ jobs:
   
 
       - name: Commit and Push Changes
-        run: |
-            cd gh-pages
-               git config --global user.name 'GitHub Actions'
-              git config --global user.email 'actions@github.com'
-             git add .
-             git commit -m "Deploy to GitHub Pages"
+        run: echo "Hello Bala"
     
     
