--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -33,6 +33,6 @@ jobs:
         run: echo "Deployed"
 
       - name: Deploy to GitHub Pages
-        run: echo "Hello Bala" > build/App.js
+        run: echo "Hello Bala"
     
     
